--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "proxyConfig": "proxy.conf.json",
             "outputPath": "dist/chat",
             "index": "src/index.html",
             "main": "src/main.ts",
